verif/test/deca/context/invalid/object/protected-fields2-verif.res
src/test/deca/context/invalid/object/protected-fields2.deca:12:16: Field 'x' is protected and cannot be accessed outside its class or subclasses 
